<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
	 xmlns:android="http://schemas.android.com/apk/res/android">
	 
	
 	<PreferenceCategory
     android:title="Sorting preferences">
    
    		 <CheckBoxPreference
    		  android:key="@string/hidden_files_folder_pref"
    		  android:title="@string/hidden_files_folder_pref_title"
    		  android:summaryOn="@string/hidden_files_folder_pref_sum_on"
    		  android:summaryOff="@string/hidden_files_folder_pref_sum_off"
    		  android:defaultValue="true"
    		  
    		  />     
    		  
    		  <CheckBoxPreference
    		  android:key="@string/sort_file_folder_pref"
    		  android:title="@string/sort_file_folder_pref_title"
    		  android:summaryOn="@string/sort_file_folder_pref_sum_on"
    		  android:summaryOff="@string/sort_file_folder_pref_sum_off"
    		  android:defaultValue="true"
    		  
    		  />  
    		       
                        
	</PreferenceCategory>
 	 
 	

</PreferenceScreen>

